[REFACTOR] status 컬럼을 추가해서 하나의 리스트로 제공 (#111)