@@ -11,33 +11,24 @@ import java.util.stream.Collectors;
 
 public record RoomResponse(Long roomId, String name, String description,
                            List<RoomMemberResponse> roomMembers,
-                           List<MSResponse> ongoingSchedules,
-                           List<MSResponse> completedSchedules) {
+                           List<MSResponse> schedules) {
 
     public static RoomResponse of(final Room room, final List<RoomMember> roomMembers, final List<MemberSchedule> memberSchedules) {
         List<RoomMemberResponse> roomMemberResponse = roomMembers.stream()
                 .map(RoomMemberResponse::from)
                 .collect(Collectors.toList());
 
-        List<MSResponse> ongoingSchedules = memberSchedules.stream()
-                .filter(schedule -> schedule.getStatus() == ScheduleStatus.PROGRESS)
+        List<MSResponse> schedules = memberSchedules.stream()
                 .sorted((a, b) -> a.getCreatedAt().compareTo(b.getCreatedAt())) // 생성 순서대로 정렬
                 .map(MSResponse::from)
-                .collect(Collectors.toList());
-
-        List<MSResponse> completedSchedules = memberSchedules.stream()
-                .filter(schedule -> schedule.getStatus() == ScheduleStatus.COMPLETE)
-                .sorted((a, b) -> a.getCreatedAt().compareTo(b.getCreatedAt())) // 생성 순서대로 정렬
-                .map(MSResponse::from)
-                .collect(Collectors.toList());
+                .toList();
 
         return new RoomResponse(
                 room.getId(),
                 room.getName().getValue(),
                 room.getDescription().getValue(),
                 roomMemberResponse,
-                ongoingSchedules,
-                completedSchedules
+                schedules
         );
     }
 }
